--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.AppAndroidMaps"
         tools:targetApi="31">
         <activity
+            android:name=".FrmSelecion"
+            android:exported="false" />
+        <activity
+            android:name=".FrmSelecciona"
+            android:exported="false"
+            android:theme="@style/Theme.AppAndroidMaps" />
+        <activity
             android:name=".FrmRegistrar"
             android:exported="false" />
         <activity
