--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppAndroidMaps"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBnCNU29dPFm6GEewa1MVonyNNCfsAUuqw" />
+
+        <!-- Mantén solo una declaración de MainActivitymaps -->
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.appandroidmaps.MainActivitymaps"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
